--- a/solve.html
+++ b/solve.html
@@ -1,30 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>solve 1</title>
+    <title id="title">SUbmit Recon</title>
+    <link rel="stylesheet" href="solve.css">
 </head>
+
 <body>
-    <h1 id="heading"></h1>
-    <br>
-    <label for="fps">fps:</label> 
-    <span id="fps"></span>
-    <br>
-    <label for="time">time:</label> 
-    <span id="time"></span>
-    <h3 id="scramble"></h3>
-    <br>
-    <textarea name="" id="reconstruction" cols="30" rows="10" placeholder="recon"></textarea>
-    <textarea name="" id="splits" cols="30" rows="10" placeholder="splits"></textarea>
-    <br>
-    <input type="button" value="submit" id="submit-button">
-
-
-    <table id="table"></table>
-
+    <div id="buttons">
+    </div>
+    <div class="heading">
+        <h3 id="heading"></h1>
+    </div>
+    <div class="fpsAndTime">
+        <label for="fps">fps:</label>
+        <input type="text" id="fps">
+        <br>
+        <label for="time">time:</label>
+        <input type="text" id="time">
+    </div>
+    <div class="scramble">
+        <h3 id="scramble"></h3>
+    </div>
+    <div class="input">
+        <textarea name="" id="reconstruction" cols="30" rows="10" placeholder="recon"></textarea>
+        <textarea name="" id="splits" cols="30" rows="10" placeholder="splits"></textarea>
+        <br><br>
+        <input class="submitBTN" type="button" value="submit" id="submit-button">
+        <input type="button" class="saveBTN" id="save" value="save" style="display: none;">
+        <br><br>
+    </div>
+    <div class="table">
+        <table id="table" border="2px"></table>
+    </div>
+    <div class="iframe">
+        <br>
+        <iframe src="https://alg.cubing.net/?alg=_&setup=_" frameborder="0" id="alg.cubing.net"></iframe>
+    </div>
 
 
     <script src="solve.js"></script>
 </body>
+
 </html>
