fix: fix pll and total stats there was a bad call to variable time that wasn't declared in the scope of the call, simple fix

--- a/solve.html
+++ b/solve.html
@@ -38,6 +38,8 @@
     <div class="iframe">
         <br>
         <iframe src="https://alg.cubing.net/?alg=_&setup=_" frameborder="0" id="alg.cubing.net"></iframe>
+        <br>
+        <a id="link">alg.cubing.net link</a>  
     </div>
 
 
