fix: switched from cookie from localStorage max cookie size is 4KB which is like 3-4 solves, max localStorage is 4-5MB which is more than enough for now

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Welcome</h1>
-    <button class="menu" id="reconDB">reconDB</button>
+    <button class="menu" id="reconDB" onclick="location.href='recon.html';">reconDB</button>
     <button class="menu" id="make-dump">submit a recon</button>
     <br><br>
     <div id="show-dump" style="display: none;"> 
