--- a/solve.html
+++ b/solve.html
@@ -4,32 +4,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title id="title">SUbmit Recon</title>
-    <link rel="stylesheet" href="solve.css">
+    <title>Submit Recon</title>
+    <link rel="stylesheet" href="global.css">
 </head>
 
 <body>
-    <div id="buttons">
+    <div class="buttons">
+        <!-- You can add buttons here if needed -->
     </div>
     <div class="heading">
-        <h3 id="heading"></h1>
+        <h3>Submit Recon</h3>
     </div>
-    <div class="fpsAndTime">
-        <label for="fps">fps:</label>
-        <input type="text" id="fps">
+    <div class="fps-and-time">
+        <label class="label" for="fps">fps:</label>
+        <input type="text" class="input-text" id="fps">
         <br>
-        <label for="time">time:</label>
-        <input type="text" id="time">
+        <label class="label" for="time">time:</label>
+        <input type="text" class="input-text" id="time">
     </div>
     <div class="scramble">
         <h3 id="scramble"></h3>
     </div>
     <div class="input">
-        <textarea name="" id="reconstruction" cols="30" rows="10" placeholder="recon"></textarea>
-        <textarea name="" id="splits" cols="30" rows="10" placeholder="splits"></textarea>
+        <textarea class="input-textarea" id="reconstruction" cols="30" rows="10" placeholder="recon"></textarea>
+        <textarea class="input-textarea" id="splits" cols="30" rows="10" placeholder="splits"></textarea>
         <br><br>
-        <input class="submitBTN" type="button" value="submit" id="submit-button">
-        <input type="button" class="saveBTN" id="save" value="save" style="display: none;">
+        <input class="button submitBTN" type="button" value="submit" id="submit-button">
+        <input type="button" class="button saveBTN" id="save" value="save" style="display: none;">
         <br><br>
     </div>
     <div class="table">
@@ -39,9 +40,8 @@
         <br>
         <iframe src="https://alg.cubing.net/?alg=_&setup=_" frameborder="0" id="alg.cubing.net"></iframe>
         <br>
-        <a id="link">alg.cubing.net link</a>  
+        <a class="link" id="link">alg.cubing.net link</a>  
     </div>
-
 
     <script src="solve.js"></script>
 </body>
